DCEMV_DemoServer/ScriptsKubernetesDeploy/shared/deployment_nginx-ingress-controller-deployment.yaml
# *************************************************************************
# DC EMV
# Open Source EMV
# Copyright (C) 2018  Vicente Da Silva
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published
# by the Free Software Foundation, either version 3 of the License, or
# any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
# 
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see http://www.gnu.org/licenses/
# *************************************************************************

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller-deployment
  namespace: payloola
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress-controller-deployment
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: nginx-ingress-controller-deployment
      #annotations:
      #  prometheus.io/port: '10254'
      #  prometheus.io/scrape: 'true'
    spec:
      terminationGracePeriodSeconds: 60
      # serviceAccount: nginx
      containers:
      - name: nginx-ingress-controller
        image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.10.0
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 5
        args:
        - /nginx-ingress-controller
        - --default-backend-service=$(POD_NAMESPACE)/default-backend
        - --configmap=$(POD_NAMESPACE)/nginx-ingress-controller-configmap
        - --v=2
        ports:
        - containerPort: 80
          hostPort: 80
        - containerPort: 443
          hostPort: 443
