DCEMV_DemoServer/ScriptsKubernetesDeploy/shared/service_dcemvdemoserver-service.yaml
# *************************************************************************
# DC EMV
# Open Source EMV
# Copyright (C) 2018  Vicente Da Silva
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published
# by the Free Software Foundation, either version 3 of the License, or
# any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
# 
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see http://www.gnu.org/licenses/
# *************************************************************************

apiVersion: v1
kind: Service
metadata:
  name: dcemvdemoserver-service
  namespace: payloola
spec:
  type: NodePort
  ports:
    - port: 44359
      nodePort: 31050
      targetPort: 44359
      protocol: TCP
  selector:
    app: dcemvdemoserver-deployment
