DCEMV_DemoServer/ScriptsKubernetesDeploy/shared/ingress_nginx-ingress-service.yaml
# *************************************************************************
# DC EMV
# Open Source EMV
# Copyright (C) 2018  Vicente Da Silva
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published
# by the Free Software Foundation, either version 3 of the License, or
# any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
# 
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see http://www.gnu.org/licenses/
# *************************************************************************

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-service
  namespace: payloola
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - www.payloola.com
      secretName: payloola-cert-secret
  rules:
    - host: www.payloola.com
      http:
        paths:
        - path: /nginx_status
          backend:
            serviceName: nginx-ingress-service
            servicePort: 18080
